objects/Sep_15_ob1__c.object
<CustomObject>
    <fields>
        <fullName>Sep_F1__c</fullName>
        <label>Sep F1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sep_F2__c</fullName>
        <label>Sep F2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sep_F3__c</fullName>
        <label>Sep F3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Test1</valueSetName>
        </valueSet>
    </fields>
</CustomObject>